// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils should create router 1`] = `
VueRouter {
  "afterHooks": Array [],
  "app": null,
  "apps": Array [],
  "beforeHooks": Array [],
  "fallback": false,
  "history": HashHistory {
    "base": "",
    "current": Object {
      "fullPath": "/",
      "hash": "",
      "matched": Array [],
      "meta": Object {},
      "name": null,
      "params": Object {},
      "path": "/",
      "query": Object {},
    },
    "errorCbs": Array [],
    "listeners": Array [],
    "pending": null,
    "ready": false,
    "readyCbs": Array [],
    "readyErrorCbs": Array [],
    "router": [Circular],
  },
  "matcher": Object {
    "addRoute": [Function],
    "addRoutes": [Function],
    "getRoutes": [Function],
    "match": [Function],
  },
  "mode": "hash",
  "options": Object {},
  "resolveHooks": Array [],
}
`;

exports[`utils should create router with options 1`] = `
VueRouter {
  "afterHooks": Array [],
  "app": null,
  "apps": Array [],
  "beforeHooks": Array [],
  "fallback": false,
  "history": HTML5History {
    "_startLocation": "/#/",
    "base": "",
    "current": Object {
      "fullPath": "/",
      "hash": "",
      "matched": Array [],
      "meta": Object {},
      "name": null,
      "params": Object {},
      "path": "/",
      "query": Object {},
    },
    "errorCbs": Array [],
    "listeners": Array [],
    "pending": null,
    "ready": false,
    "readyCbs": Array [],
    "readyErrorCbs": Array [],
    "router": [Circular],
  },
  "matcher": Object {
    "addRoute": [Function],
    "addRoutes": [Function],
    "getRoutes": [Function],
    "match": [Function],
  },
  "mode": "history",
  "options": Object {
    "mode": "history",
    "routes": Array [],
  },
  "resolveHooks": Array [],
}
`;

exports[`utils should create store 1`] = `
Store {
  "_actionSubscribers": Array [],
  "_actions": Object {},
  "_committing": false,
  "_makeLocalGettersCache": Object {},
  "_modules": ModuleCollection {
    "root": Module {
      "_children": Object {},
      "_rawModule": Object {
        "actions": Object {},
        "modules": Object {},
        "mutations": Object {},
      },
      "context": Object {
        "commit": [Function],
        "dispatch": [Function],
      },
      "runtime": false,
      "state": Object {},
    },
  },
  "_modulesNamespaceMap": Object {},
  "_mutations": Object {},
  "_subscribers": Array [],
  "_vm": VueComponent {
    "$attrs": Object {},
    "$children": Array [],
    "$createElement": [Function],
    "$listeners": Object {},
    "$options": Object {
      "_Ctor": Object {
        "0": [Function],
      },
      "_base": [Function],
      "beforeCreate": Array [
        [Function],
        [Function],
        [Function],
      ],
      "beforeMount": Array [
        [Function],
      ],
      "components": Object {},
      "computed": Object {},
      "data": [Function],
      "directives": Object {},
      "filters": Object {},
      "mounted": Array [
        [Function],
      ],
    },
    "$parent": undefined,
    "$refs": Object {},
    "$root": [Circular],
    "$scopedSlots": Object {},
    "$slots": Object {},
    "$vnode": undefined,
    "$vuetify": [Circular],
    "__v_skip": true,
    "_c": [Function],
    "_computedWatchers": Object {},
    "_data": Object {
      "$$state": Object {},
    },
    "_directInactive": false,
    "_events": Object {
      "hook:beforeMount": Array [
        [Function],
      ],
    },
    "_hasHookEvent": true,
    "_inactive": null,
    "_isBeingDestroyed": false,
    "_isDestroyed": false,
    "_isMounted": false,
    "_isVue": true,
    "_provided": Object {},
    "_renderProxy": VueComponent {
      "$attrs": Object {},
      "$children": Array [],
      "$createElement": [Function],
      "$listeners": Object {},
      "$options": Object {
        "_Ctor": Object {
          "0": [Function],
        },
        "_base": [Function],
        "beforeCreate": Array [
          [Function],
          [Function],
          [Function],
        ],
        "beforeMount": Array [
          [Function],
        ],
        "components": Object {},
        "computed": Object {},
        "data": [Function],
        "directives": Object {},
        "filters": Object {},
        "mounted": Array [
          [Function],
        ],
      },
      "$parent": undefined,
      "$refs": Object {},
      "$root": [Circular],
      "$scopedSlots": Object {},
      "$slots": Object {},
      "$vnode": undefined,
      "$vuetify": [Circular],
      "__v_skip": true,
      "_c": [Function],
      "_computedWatchers": Object {},
      "_data": Object {
        "$$state": Object {},
      },
      "_directInactive": false,
      "_events": Object {
        "hook:beforeMount": Array [
          [Function],
        ],
      },
      "_hasHookEvent": true,
      "_inactive": null,
      "_isBeingDestroyed": false,
      "_isDestroyed": false,
      "_isMounted": false,
      "_isVue": true,
      "_provided": Object {},
      "_renderProxy": [Circular],
      "_scope": EffectScope {
        "active": true,
        "cleanups": Array [],
        "effects": Array [],
      },
      "_self": [Circular],
      "_staticTrees": null,
      "_uid": 1,
      "_vnode": null,
      "_watcher": null,
    },
    "_scope": EffectScope {
      "active": true,
      "cleanups": Array [],
      "effects": Array [],
    },
    "_self": [Circular],
    "_staticTrees": null,
    "_uid": 1,
    "_vnode": null,
    "_watcher": null,
  },
  "_watcherVM": VueComponent {
    "$attrs": Object {},
    "$children": Array [],
    "$createElement": [Function],
    "$listeners": Object {},
    "$options": Object {
      "_Ctor": Object {
        "0": [Function],
      },
      "_base": [Function],
      "beforeCreate": Array [
        [Function],
        [Function],
        [Function],
      ],
      "beforeMount": Array [
        [Function],
      ],
      "components": Object {},
      "directives": Object {},
      "filters": Object {},
      "mounted": Array [
        [Function],
      ],
    },
    "$parent": undefined,
    "$refs": Object {},
    "$root": [Circular],
    "$scopedSlots": Object {},
    "$slots": Object {},
    "$vnode": undefined,
    "$vuetify": [Circular],
    "__v_skip": true,
    "_c": [Function],
    "_data": Object {},
    "_directInactive": false,
    "_events": Object {
      "hook:beforeMount": Array [
        [Function],
      ],
    },
    "_hasHookEvent": true,
    "_inactive": null,
    "_isBeingDestroyed": false,
    "_isDestroyed": false,
    "_isMounted": false,
    "_isVue": true,
    "_provided": Object {},
    "_renderProxy": VueComponent {
      "$attrs": Object {},
      "$children": Array [],
      "$createElement": [Function],
      "$listeners": Object {},
      "$options": Object {
        "_Ctor": Object {
          "0": [Function],
        },
        "_base": [Function],
        "beforeCreate": Array [
          [Function],
          [Function],
          [Function],
        ],
        "beforeMount": Array [
          [Function],
        ],
        "components": Object {},
        "directives": Object {},
        "filters": Object {},
        "mounted": Array [
          [Function],
        ],
      },
      "$parent": undefined,
      "$refs": Object {},
      "$root": [Circular],
      "$scopedSlots": Object {},
      "$slots": Object {},
      "$vnode": undefined,
      "$vuetify": [Circular],
      "__v_skip": true,
      "_c": [Function],
      "_data": Object {},
      "_directInactive": false,
      "_events": Object {
        "hook:beforeMount": Array [
          [Function],
        ],
      },
      "_hasHookEvent": true,
      "_inactive": null,
      "_isBeingDestroyed": false,
      "_isDestroyed": false,
      "_isMounted": false,
      "_isVue": true,
      "_provided": Object {},
      "_renderProxy": [Circular],
      "_scope": EffectScope {
        "active": true,
        "cleanups": Array [],
        "effects": Array [],
      },
      "_self": [Circular],
      "_staticTrees": null,
      "_uid": 0,
      "_vnode": null,
      "_watcher": null,
    },
    "_scope": EffectScope {
      "active": true,
      "cleanups": Array [],
      "effects": Array [],
    },
    "_self": [Circular],
    "_staticTrees": null,
    "_uid": 0,
    "_vnode": null,
    "_watcher": null,
  },
  "_wrappedGetters": Object {},
  "commit": [Function],
  "dispatch": [Function],
  "getters": Object {},
  "strict": false,
}
`;

exports[`utils should create vuetify instance 1`] = `
Vuetify {
  "framework": Object {
    "application": Application {
      "application": Object {
        "bar": Object {},
        "bottom": Object {},
        "footer": Object {},
        "insetFooter": Object {},
        "left": Object {},
        "right": Object {},
        "top": Object {},
      },
      "bar": 0,
      "bottom": 0,
      "footer": 0,
      "framework": Object {},
      "insetFooter": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    },
    "breakpoint": Breakpoint {
      "framework": Object {},
      "height": 0,
      "lg": false,
      "lgAndDown": false,
      "lgAndUp": false,
      "lgOnly": false,
      "md": false,
      "mdAndDown": false,
      "mdAndUp": false,
      "mdOnly": false,
      "mobile": true,
      "mobileBreakpoint": 1264,
      "name": "xs",
      "resizeTimeout": 0,
      "scrollBarWidth": 16,
      "sm": false,
      "smAndDown": false,
      "smAndUp": false,
      "smOnly": false,
      "thresholds": Object {
        "lg": 1920,
        "md": 1280,
        "sm": 960,
        "xs": 600,
      },
      "width": 0,
      "xl": false,
      "xlOnly": false,
      "xs": false,
      "xsOnly": false,
    },
    "goTo": [Function],
    "icons": Icons {
      "component": undefined,
      "framework": Object {},
      "iconfont": "mdi",
      "values": Object {
        "cancel": "mdi-close-circle",
        "checkboxIndeterminate": "mdi-minus-box",
        "checkboxOff": "mdi-checkbox-blank-outline",
        "checkboxOn": "mdi-checkbox-marked",
        "clear": "mdi-close",
        "close": "mdi-close",
        "complete": "mdi-check",
        "delete": "mdi-close-circle",
        "delimiter": "mdi-circle",
        "dropdown": "mdi-menu-down",
        "edit": "mdi-pencil",
        "error": "mdi-alert",
        "expand": "mdi-chevron-down",
        "file": "mdi-paperclip",
        "first": "mdi-page-first",
        "info": "mdi-information",
        "last": "mdi-page-last",
        "loading": "mdi-cached",
        "menu": "mdi-menu",
        "minus": "mdi-minus",
        "next": "mdi-chevron-right",
        "plus": "mdi-plus",
        "prev": "mdi-chevron-left",
        "radioOff": "mdi-radiobox-blank",
        "radioOn": "mdi-radiobox-marked",
        "ratingEmpty": "mdi-star-outline",
        "ratingFull": "mdi-star",
        "ratingHalf": "mdi-star-half-full",
        "sort": "mdi-arrow-up",
        "subgroup": "mdi-menu-down",
        "success": "mdi-check-circle",
        "unfold": "mdi-unfold-more-horizontal",
        "warning": "mdi-exclamation",
      },
    },
    "isHydrating": false,
    "lang": Lang {
      "current": "en",
      "defaultLocale": "en",
      "framework": Object {},
      "locales": Object {
        "en": Object {
          "badge": "Badge",
          "calendar": Object {
            "moreEvents": "{0} more",
          },
          "carousel": Object {
            "ariaLabel": Object {
              "delimiter": "Carousel slide {0} of {1}",
            },
            "next": "Next visual",
            "prev": "Previous visual",
          },
          "close": "Close",
          "dataFooter": Object {
            "firstPage": "First page",
            "itemsPerPageAll": "All",
            "itemsPerPageText": "Items per page:",
            "lastPage": "Last page",
            "nextPage": "Next page",
            "pageText": "{0}-{1} of {2}",
            "prevPage": "Previous page",
          },
          "dataIterator": Object {
            "loadingText": "Loading items...",
            "noResultsText": "No matching records found",
          },
          "dataTable": Object {
            "ariaLabel": Object {
              "activateAscending": "Activate to sort ascending.",
              "activateDescending": "Activate to sort descending.",
              "activateNone": "Activate to remove sorting.",
              "sortAscending": "Sorted ascending.",
              "sortDescending": "Sorted descending.",
              "sortNone": "Not sorted.",
            },
            "itemsPerPageText": "Rows per page:",
            "sortBy": "Sort by",
          },
          "datePicker": Object {
            "itemsSelected": "{0} selected",
            "nextMonthAriaLabel": "Next month",
            "nextYearAriaLabel": "Next year",
            "prevMonthAriaLabel": "Previous month",
            "prevYearAriaLabel": "Previous year",
          },
          "fileInput": Object {
            "counter": "{0} files",
            "counterSize": "{0} files ({1} in total)",
          },
          "noDataText": "No data available",
          "pagination": Object {
            "ariaLabel": Object {
              "currentPage": "Current Page, Page {0}",
              "next": "Next page",
              "page": "Goto Page {0}",
              "previous": "Previous page",
              "wrapper": "Pagination Navigation",
            },
          },
          "rating": Object {
            "ariaLabel": Object {
              "icon": "Rating {0} of {1}",
            },
          },
          "timePicker": Object {
            "am": "AM",
            "pm": "PM",
          },
        },
      },
      "translator": [Function],
    },
    "presets": Presets {
      "framework": Object {},
    },
    "theme": Theme {
      "defaults": Object {
        "dark": Object {
          "accent": "#FF4081",
          "error": "#FF5252",
          "info": "#2196F3",
          "primary": "#2196F3",
          "secondary": "#424242",
          "success": "#4CAF50",
          "warning": "#FB8C00",
        },
        "light": Object {
          "accent": "#82B1FF",
          "error": "#FF5252",
          "info": "#2196F3",
          "primary": "#1976D2",
          "secondary": "#424242",
          "success": "#4CAF50",
          "warning": "#FB8C00",
        },
      },
      "disabled": false,
      "framework": Object {},
      "isDark": false,
      "options": Object {
        "cspNonce": undefined,
        "customProperties": undefined,
        "minifyTheme": undefined,
        "themeCache": undefined,
        "variations": true,
      },
      "themes": Object {
        "dark": Object {
          "accent": "#FF4081",
          "error": "#FF5252",
          "info": "#2196F3",
          "primary": "#2196F3",
          "secondary": "#424242",
          "success": "#4CAF50",
          "warning": "#FB8C00",
        },
        "light": Object {
          "accent": "#82B1FF",
          "error": "#FF5252",
          "info": "#2196F3",
          "primary": "#1976D2",
          "secondary": "#424242",
          "success": "#4CAF50",
          "warning": "#FB8C00",
        },
      },
      "unwatch": null,
      "vueMeta": null,
    },
  },
  "installed": Array [
    "presets",
    "application",
    "breakpoint",
    "goTo",
    "icons",
    "lang",
    "theme",
  ],
  "preset": Object {
    "breakpoint": Object {
      "mobileBreakpoint": 1264,
      "scrollBarWidth": 16,
      "thresholds": Object {
        "lg": 1920,
        "md": 1280,
        "sm": 960,
        "xs": 600,
      },
    },
    "icons": Object {
      "iconfont": "mdi",
      "values": Object {},
    },
    "lang": Object {
      "current": "en",
      "locales": Object {
        "en": Object {
          "badge": "Badge",
          "calendar": Object {
            "moreEvents": "{0} more",
          },
          "carousel": Object {
            "ariaLabel": Object {
              "delimiter": "Carousel slide {0} of {1}",
            },
            "next": "Next visual",
            "prev": "Previous visual",
          },
          "close": "Close",
          "dataFooter": Object {
            "firstPage": "First page",
            "itemsPerPageAll": "All",
            "itemsPerPageText": "Items per page:",
            "lastPage": "Last page",
            "nextPage": "Next page",
            "pageText": "{0}-{1} of {2}",
            "prevPage": "Previous page",
          },
          "dataIterator": Object {
            "loadingText": "Loading items...",
            "noResultsText": "No matching records found",
          },
          "dataTable": Object {
            "ariaLabel": Object {
              "activateAscending": "Activate to sort ascending.",
              "activateDescending": "Activate to sort descending.",
              "activateNone": "Activate to remove sorting.",
              "sortAscending": "Sorted ascending.",
              "sortDescending": "Sorted descending.",
              "sortNone": "Not sorted.",
            },
            "itemsPerPageText": "Rows per page:",
            "sortBy": "Sort by",
          },
          "datePicker": Object {
            "itemsSelected": "{0} selected",
            "nextMonthAriaLabel": "Next month",
            "nextYearAriaLabel": "Next year",
            "prevMonthAriaLabel": "Previous month",
            "prevYearAriaLabel": "Previous year",
          },
          "fileInput": Object {
            "counter": "{0} files",
            "counterSize": "{0} files ({1} in total)",
          },
          "noDataText": "No data available",
          "pagination": Object {
            "ariaLabel": Object {
              "currentPage": "Current Page, Page {0}",
              "next": "Next page",
              "page": "Goto Page {0}",
              "previous": "Previous page",
              "wrapper": "Pagination Navigation",
            },
          },
          "rating": Object {
            "ariaLabel": Object {
              "icon": "Rating {0} of {1}",
            },
          },
          "timePicker": Object {
            "am": "AM",
            "pm": "PM",
          },
        },
      },
      "t": undefined,
    },
    "rtl": false,
    "theme": Object {
      "dark": false,
      "default": "light",
      "disable": false,
      "options": Object {
        "cspNonce": undefined,
        "customProperties": undefined,
        "minifyTheme": undefined,
        "themeCache": undefined,
        "variations": true,
      },
      "themes": Object {
        "dark": Object {
          "accent": "#FF4081",
          "error": "#FF5252",
          "info": "#2196F3",
          "primary": "#2196F3",
          "secondary": "#424242",
          "success": "#4CAF50",
          "warning": "#FB8C00",
        },
        "light": Object {
          "accent": "#82B1FF",
          "error": "#FF5252",
          "info": "#2196F3",
          "primary": "#1976D2",
          "secondary": "#424242",
          "success": "#4CAF50",
          "warning": "#FB8C00",
        },
      },
    },
  },
  "userPreset": Object {},
}
`;

exports[`utils should create vuetify instance with preset 1`] = `
Vuetify {
  "framework": Object {
    "application": Application {
      "application": Object {
        "bar": Object {},
        "bottom": Object {},
        "footer": Object {},
        "insetFooter": Object {},
        "left": Object {},
        "right": Object {},
        "top": Object {},
      },
      "bar": 0,
      "bottom": 0,
      "footer": 0,
      "framework": Object {},
      "insetFooter": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    },
    "breakpoint": Breakpoint {
      "framework": Object {},
      "height": 0,
      "lg": false,
      "lgAndDown": false,
      "lgAndUp": false,
      "lgOnly": false,
      "md": false,
      "mdAndDown": false,
      "mdAndUp": false,
      "mdOnly": false,
      "mobile": true,
      "mobileBreakpoint": 1264,
      "name": "xs",
      "resizeTimeout": 0,
      "scrollBarWidth": 16,
      "sm": false,
      "smAndDown": false,
      "smAndUp": false,
      "smOnly": false,
      "thresholds": Object {
        "lg": 1920,
        "md": 1280,
        "sm": 960,
        "xs": 600,
      },
      "width": 0,
      "xl": false,
      "xlOnly": false,
      "xs": false,
      "xsOnly": false,
    },
    "goTo": [Function],
    "icons": Icons {
      "component": undefined,
      "framework": Object {},
      "iconfont": "mdi",
      "values": Object {
        "cancel": "mdi-close-circle",
        "checkboxIndeterminate": "mdi-minus-box",
        "checkboxOff": "mdi-checkbox-blank-outline",
        "checkboxOn": "mdi-checkbox-marked",
        "clear": "mdi-close",
        "close": "mdi-close",
        "complete": "mdi-check",
        "delete": "mdi-close-circle",
        "delimiter": "mdi-circle",
        "dropdown": "mdi-menu-down",
        "edit": "mdi-pencil",
        "error": "mdi-alert",
        "expand": "mdi-chevron-down",
        "file": "mdi-paperclip",
        "first": "mdi-page-first",
        "info": "mdi-information",
        "last": "mdi-page-last",
        "loading": "mdi-cached",
        "menu": "mdi-menu",
        "minus": "mdi-minus",
        "next": "mdi-chevron-right",
        "plus": "mdi-plus",
        "prev": "mdi-chevron-left",
        "radioOff": "mdi-radiobox-blank",
        "radioOn": "mdi-radiobox-marked",
        "ratingEmpty": "mdi-star-outline",
        "ratingFull": "mdi-star",
        "ratingHalf": "mdi-star-half-full",
        "sort": "mdi-arrow-up",
        "subgroup": "mdi-menu-down",
        "success": "mdi-check-circle",
        "unfold": "mdi-unfold-more-horizontal",
        "warning": "mdi-exclamation",
      },
    },
    "isHydrating": false,
    "lang": Lang {
      "current": "en",
      "defaultLocale": "en",
      "framework": Object {},
      "locales": Object {
        "en": Object {
          "badge": "Badge",
          "calendar": Object {
            "moreEvents": "{0} more",
          },
          "carousel": Object {
            "ariaLabel": Object {
              "delimiter": "Carousel slide {0} of {1}",
            },
            "next": "Next visual",
            "prev": "Previous visual",
          },
          "close": "Close",
          "dataFooter": Object {
            "firstPage": "First page",
            "itemsPerPageAll": "All",
            "itemsPerPageText": "Items per page:",
            "lastPage": "Last page",
            "nextPage": "Next page",
            "pageText": "{0}-{1} of {2}",
            "prevPage": "Previous page",
          },
          "dataIterator": Object {
            "loadingText": "Loading items...",
            "noResultsText": "No matching records found",
          },
          "dataTable": Object {
            "ariaLabel": Object {
              "activateAscending": "Activate to sort ascending.",
              "activateDescending": "Activate to sort descending.",
              "activateNone": "Activate to remove sorting.",
              "sortAscending": "Sorted ascending.",
              "sortDescending": "Sorted descending.",
              "sortNone": "Not sorted.",
            },
            "itemsPerPageText": "Rows per page:",
            "sortBy": "Sort by",
          },
          "datePicker": Object {
            "itemsSelected": "{0} selected",
            "nextMonthAriaLabel": "Next month",
            "nextYearAriaLabel": "Next year",
            "prevMonthAriaLabel": "Previous month",
            "prevYearAriaLabel": "Previous year",
          },
          "fileInput": Object {
            "counter": "{0} files",
            "counterSize": "{0} files ({1} in total)",
          },
          "noDataText": "No data available",
          "pagination": Object {
            "ariaLabel": Object {
              "currentPage": "Current Page, Page {0}",
              "next": "Next page",
              "page": "Goto Page {0}",
              "previous": "Previous page",
              "wrapper": "Pagination Navigation",
            },
          },
          "rating": Object {
            "ariaLabel": Object {
              "icon": "Rating {0} of {1}",
            },
          },
          "timePicker": Object {
            "am": "AM",
            "pm": "PM",
          },
        },
      },
      "translator": [Function],
    },
    "presets": Presets {
      "framework": Object {},
    },
    "theme": Theme {
      "defaults": Object {
        "dark": Object {
          "accent": "#FF4081",
          "error": "#FF5252",
          "info": "#2196F3",
          "primary": "#2196F3",
          "secondary": "#424242",
          "success": "#4CAF50",
          "warning": "#FB8C00",
        },
        "light": undefined,
      },
      "disabled": false,
      "framework": Object {},
      "isDark": false,
      "options": Object {
        "cspNonce": undefined,
        "customProperties": undefined,
        "minifyTheme": undefined,
        "themeCache": undefined,
        "variations": true,
      },
      "themes": Object {
        "dark": Object {
          "accent": "#FF4081",
          "error": "#FF5252",
          "info": "#2196F3",
          "primary": "#2196F3",
          "secondary": "#424242",
          "success": "#4CAF50",
          "warning": "#FB8C00",
        },
        "light": Object {},
      },
      "unwatch": null,
      "vueMeta": null,
    },
  },
  "installed": Array [
    "presets",
    "application",
    "breakpoint",
    "goTo",
    "icons",
    "lang",
    "theme",
  ],
  "preset": Object {
    "breakpoint": Object {
      "mobileBreakpoint": 1264,
      "scrollBarWidth": 16,
      "thresholds": Object {
        "lg": 1920,
        "md": 1280,
        "sm": 960,
        "xs": 600,
      },
    },
    "icons": Object {
      "iconfont": "mdi",
      "values": Object {},
    },
    "lang": Object {
      "current": "en",
      "locales": Object {
        "en": Object {
          "badge": "Badge",
          "calendar": Object {
            "moreEvents": "{0} more",
          },
          "carousel": Object {
            "ariaLabel": Object {
              "delimiter": "Carousel slide {0} of {1}",
            },
            "next": "Next visual",
            "prev": "Previous visual",
          },
          "close": "Close",
          "dataFooter": Object {
            "firstPage": "First page",
            "itemsPerPageAll": "All",
            "itemsPerPageText": "Items per page:",
            "lastPage": "Last page",
            "nextPage": "Next page",
            "pageText": "{0}-{1} of {2}",
            "prevPage": "Previous page",
          },
          "dataIterator": Object {
            "loadingText": "Loading items...",
            "noResultsText": "No matching records found",
          },
          "dataTable": Object {
            "ariaLabel": Object {
              "activateAscending": "Activate to sort ascending.",
              "activateDescending": "Activate to sort descending.",
              "activateNone": "Activate to remove sorting.",
              "sortAscending": "Sorted ascending.",
              "sortDescending": "Sorted descending.",
              "sortNone": "Not sorted.",
            },
            "itemsPerPageText": "Rows per page:",
            "sortBy": "Sort by",
          },
          "datePicker": Object {
            "itemsSelected": "{0} selected",
            "nextMonthAriaLabel": "Next month",
            "nextYearAriaLabel": "Next year",
            "prevMonthAriaLabel": "Previous month",
            "prevYearAriaLabel": "Previous year",
          },
          "fileInput": Object {
            "counter": "{0} files",
            "counterSize": "{0} files ({1} in total)",
          },
          "noDataText": "No data available",
          "pagination": Object {
            "ariaLabel": Object {
              "currentPage": "Current Page, Page {0}",
              "next": "Next page",
              "page": "Goto Page {0}",
              "previous": "Previous page",
              "wrapper": "Pagination Navigation",
            },
          },
          "rating": Object {
            "ariaLabel": Object {
              "icon": "Rating {0} of {1}",
            },
          },
          "timePicker": Object {
            "am": "AM",
            "pm": "PM",
          },
        },
      },
      "t": undefined,
    },
    "rtl": false,
    "theme": Object {
      "dark": false,
      "default": "light",
      "disable": false,
      "options": Object {
        "cspNonce": undefined,
        "customProperties": undefined,
        "minifyTheme": undefined,
        "themeCache": undefined,
        "variations": true,
      },
      "themes": Object {
        "dark": Object {
          "accent": "#FF4081",
          "error": "#FF5252",
          "info": "#2196F3",
          "primary": "#2196F3",
          "secondary": "#424242",
          "success": "#4CAF50",
          "warning": "#FB8C00",
        },
        "light": undefined,
      },
    },
  },
  "userPreset": Object {
    "theme": Object {
      "themes": Object {
        "light": undefined,
      },
    },
  },
}
`;

exports[`utils should install global plugins 1`] = `[Function]`;

exports[`utils should install router 1`] = `[Function]`;
